// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileList renders normally with multiple files props 1`] = `
<div
  class="root"
>
  <label
    class="labelText"
    for="multiple"
  >
    Test
  </label>
  <div
    class="inputWrapper"
  >
    <ul
      class="list standard noBullets"
    >
      <li
        class="fileListItem"
      >
        <span
          class="text brand span fileName"
        >
          testFile1.pdf
        </span>
        <button
          class="delete"
          type="button"
        >
          <div
            class="iconWrapper critical"
          >
            <svg
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <path
                  d="M0 0h24v24H0z"
                />
                <path
                  d="M17.657 7.757L13.414 12l4.243 4.243-1.414 1.414L12 13.414l-4.243 4.243-1.414-1.414L10.586 12 6.343 7.757l1.414-1.414L12 10.586l4.243-4.243z"
                  fill="currentColor"
                />
              </g>
            </svg>
          </div>
        </button>
      </li>
      <li
        class="fileListItem"
      >
        <span
          class="text brand span fileName"
        >
          testFile2.pdf
        </span>
        <button
          class="delete"
          type="button"
        >
          <div
            class="iconWrapper critical"
          >
            <svg
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <path
                  d="M0 0h24v24H0z"
                />
                <path
                  d="M17.657 7.757L13.414 12l4.243 4.243-1.414 1.414L12 13.414l-4.243 4.243-1.414-1.414L10.586 12 6.343 7.757l1.414-1.414L12 10.586l4.243-4.243z"
                  fill="currentColor"
                />
              </g>
            </svg>
          </div>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`FileList renders normally with single file props 1`] = `
<div
  class="root"
>
  <label
    class="labelText"
    for="single"
  >
    Test
  </label>
  <div
    class="inputWrapper"
  >
    <ul
      class="list standard noBullets"
    >
      <li
        class="fileListItem"
      >
        <span
          class="text brand span fileName"
        >
          testFile1.pdf
        </span>
        <button
          class="delete"
          type="button"
        >
          <div
            class="iconWrapper critical"
          >
            <svg
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <path
                  d="M0 0h24v24H0z"
                />
                <path
                  d="M17.657 7.757L13.414 12l4.243 4.243-1.414 1.414L12 13.414l-4.243 4.243-1.414-1.414L10.586 12 6.343 7.757l1.414-1.414L12 10.586l4.243-4.243z"
                  fill="currentColor"
                />
              </g>
            </svg>
          </div>
        </button>
      </li>
    </ul>
  </div>
</div>
`;
